@@ -773,12 +773,9 @@
                           *coutput-stream*)))
         (format *coutput-stream* ");~%")))
     (format *coutput-stream*
-            "~%void module__~A__init_function_1 (module_t* module);~%~
-            ~%void module__~A__init_function_2 (module_t* module);~%~
-            ~%void module__~A__fini_function (module_t* module);~%~
-            ~2%void module__~A__init_function_1 (module_t* module)~%~
-            {~{~%~A~}~%"
-            *c-name* *c-name* *c-name* *c-name* *init-once*)
+            "~2%void module__~A__init_function_1 (module_t* module)~%~
+            {~%  (void)module; /* avoid -Wunused-parameter */~%~{~%  ~A~}~%"
+            *c-name* *init-once*)
     (let ((done (make-hash-table :test 'equal)))
       (maphash (lambda (type spec)
                  (declare (ignore type))
@@ -793,7 +790,7 @@
                *c-type-table*))
     (format *coutput-stream*
             "}~2%void module__~A__init_function_2 (module_t* module)~%~
-            {~{~%~A~}~%"
+            {~%  (void)module; /* avoid -Wunused-parameter */~%~{~%  ~A~}~%"
              *c-name* *init-always*)
     (dolist (variable *variable-list*)
       (let ((c-name (first variable)))
@@ -825,7 +822,7 @@
              *constant-table*)
     (format *coutput-stream*
             "}~2%void module__~A__fini_function (module_t* module)~%~
-            {~{~%~A~}~%}~%"
+            {~%  (void)module; /* avoid -Wunused-parameter */~%~{~%  ~A~}~%}~%"
             *c-name* *fini*)))
 
 ; Allocate a new object in the module's object_tab.
